# acss-rs

./: .gitignore  Cargo.toml  README.md  ip_file
benchmark/: .committee.json  cleanup.sh  client.json  fabfile.py  ip_file  latency_print.py  results.csv  results_64_dpss.csv  run_experiments.sh  script.sh  settings.json  stats.py  syncer  syncer.json
benchmark/benchmark/: commands.py  config.py  instance.py  remote.py  utils.py
benchmark/export_logs/: latency_analyzer.py
benchmark/logs/: sam_out.txt  sam_script.sh
benchmark/logs_dpss_comp/: compute_time_extract.py
compute/: Cargo.toml
compute/triplecompression/: Cargo.toml
compute/triplecompression/src/: context.rs  handler.rs  lib.rs  math.rs  process.rs  protocol.rs
compute/weaksharemultiplication/: Cargo.toml
compute/weaksharemultiplication/src/: context.rs  helper.rs  math.rs  mod.rs  process.rs  protocol.rs  serialize.rs
config/src/: node.rs
consensus/: Cargo.toml
consensus/acs/: Cargo.toml
consensus/acs/src/: context.rs  lib.rs  msg.rs  process.rs
consensus/acss/: Cargo.toml
consensus/acss/src/: context.rs  lib.rs  msg.rs  process.rs
consensus/acss_bv/: Cargo.toml
consensus/acss_bv/src/: context.rs  lib.rs  msg.rs  process.rs
consensus/acss_ske/: Cargo.toml
consensus/acss_ske/src/: context.rs  lib.rs  msg.rs  process.rs
consensus/acss_va/: Cargo.toml
consensus/acss_va/src/: context.rs  msg.rs  process.rs
consensus/asks/: Cargo.toml
consensus/asks/src/: context.rs  lib.rs  msg.rs  process.rs
consensus/avid/: Cargo.toml
consensus/avid/src/: context.rs  lib.rs  msg.rs  process.rs
consensus/binary_ba/: Cargo.toml
consensus/binary_ba/src/: context.rs  lib.rs  msg.rs  process.rs
consensus/ctrbc/: Cargo.toml
consensus/ctrbc/src/: context.rs  lib.rs  msg.rs  process.rs
consensus/dpss/: Cargo.toml
consensus/dpss/src/: context.rs  process.rs
consensus/ecc_rbc/: Cargo.toml
consensus/ecc_rbc/src/: context.rs  echo.rs  handler.rs  init.rs  lib.rs  msg.rs  process.rs  ready.rs
consensus/fin_mvba/: Cargo.toml
consensus/fin_mvba/src/: context.rs  msg.rs  process.rs
consensus/g_acss/: Cargo.toml
consensus/g_acss/src/: context.rs  lib.rs  msg.rs
consensus/g_dpss/: Cargo.toml
consensus/g_dpss/src/: context.rs  msg.rs  process.rs
consensus/hacss/: Cargo.toml
consensus/hacss/src/: context.rs  lib.rs  msg.rs  process.rs
consensus/ibft/: Cargo.toml
consensus/ibft/src/: context.rs  msg.rs  process.rs
consensus/ra/: Cargo.toml
consensus/ra/src/: context.rs  lib.rs  msg.rs  process.rs
consensus/rbc/: Cargo.toml
consensus/rbc/src/: context.rs  handler.rs  lib.rs  ping.rs  process.rs
consensus/src/: lib.rs  poly.rs  reed_solomon.rs  timer.rs  types.rs
consensus/src/dzk/: folding.rs  lin.rs  mod.rs  msg.rs  proof.rs
consensus/src/handlers/: mod.rs
consensus/src/shamir/: lf.rs  mod.rs  starkfield.rs
crypto/: Cargo.toml
crypto/src/: crypto.rs  lib.rs  prf.rs  sym.rs
crypto/src/aes_hash/merkle/: merkle.rs  proof.rs
data/ht/: vandermonde_inverse-10.json  vandermonde_inverse-13.json  vandermonde_inverse-16.json  vandermonde_inverse-19.json  vandermonde_inverse-22.json  vandermonde_inverse-25.json  vandermonde_inverse-28.json  vandermonde_inverse-31.json  vandermonde_inverse-34.json  vandermonde_inverse-37.json  vandermonde_inverse-4.json  vandermonde_inverse-40.json  vandermonde_inverse-43.json  vandermonde_inverse-46.json  vandermonde_inverse-49.json  vandermonde_inverse-52.json  vandermonde_inverse-55.json  vandermonde_inverse-58.json  vandermonde_inverse-61.json  vandermonde_inverse-64.json  vandermonde_inverse-67.json  vandermonde_inverse-7.json  vandermonde_inverse-70.json  vandermonde_inverse-73.json  vandermonde_inverse-76.json  vandermonde_inverse-79.json  vandermonde_inverse-82.json  vandermonde_inverse-85.json  vandermonde_inverse-88.json  vandermonde_inverse-91.json  vandermonde_inverse-94.json  vandermonde_inverse-97.json
data/lt/: vandermonde_inverse-10.json  vandermonde_inverse-100.json  vandermonde_inverse-13.json  vandermonde_inverse-16.json  vandermonde_inverse-19.json  vandermonde_inverse-22.json  vandermonde_inverse-25.json  vandermonde_inverse-28.json  vandermonde_inverse-31.json  vandermonde_inverse-34.json  vandermonde_inverse-37.json  vandermonde_inverse-4.json  vandermonde_inverse-40.json  vandermonde_inverse-43.json  vandermonde_inverse-46.json  vandermonde_inverse-49.json  vandermonde_inverse-52.json  vandermonde_inverse-55.json  vandermonde_inverse-58.json  vandermonde_inverse-61.json  vandermonde_inverse-64.json  vandermonde_inverse-67.json  vandermonde_inverse-7.json  vandermonde_inverse-70.json  vandermonde_inverse-73.json  vandermonde_inverse-76.json  vandermonde_inverse-79.json  vandermonde_inverse-82.json  vandermonde_inverse-85.json  vandermonde_inverse-88.json  vandermonde_inverse-91.json  vandermonde_inverse-94.json  vandermonde_inverse-97.json
node/: Cargo.toml
node/src/: cli.yml  main.rs  syncer.rs
reconstruction/: Cargo.toml
reconstruction/publicweak/: Cargo.toml
reconstruction/publicweak/src/: context.rs  lib.rs  process.rs  protocol.rs
scripts/: test.sh
testdata/hyb_16/: nodes-0.json  nodes-1.json  nodes-10.json  nodes-11.json  nodes-12.json  nodes-13.json  nodes-14.json  nodes-15.json  nodes-2.json  nodes-3.json  nodes-4.json  nodes-5.json  nodes-6.json  nodes-7.json  nodes-8.json  nodes-9.json  test_msgs.txt
tools/genconfig/src/: main.rs
tools/genvandermonde/: Cargo.toml
tools/genvandermonde/src/: main.rs
types/src/msg/: mod.rs  msg.rs  (+2 more)
util/: Cargo.toml
(+116 files in other folders)
