[package]
name = "crypto"
version = "0.1.0"
authors = ["hermitsage <dth.bht@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# types = { package = "types", path="../types"}
sha2 = "0.9.2"
hmac = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
rand = "0.8.5"
aes = "0.8.3"

[dev-dependencies]
quickcheck = "1"